Fix release image jumpiness during loading
Previously the release text would appear at the top of the grid only to jump down as soon as the image was loaded. Now a placeholder is shown in the correct size while images are loading.

--- a/_sass/4-layouts/_music.scss
+++ b/_sass/4-layouts/_music.scss
@@ -14,8 +14,16 @@
   }
 }
 
+.release__image__container {
+  padding-bottom: 100%;
+  background: $gray-white;
+  height: 0;
+  margin-bottom: 1.5rem;
+}
+
 .music__release__image { 
-  width: auto !important;
+  width: 100%;
+  height: 100%;
 }
 
 .music__release__title { 
